--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ember-cli-tutorial-style": "^2.0.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-cli-update": "^0.14.0",
+    "ember-cli-version-checker": "^2.1.0",
     "ember-cp-validations": "^3.5.1",
     "ember-data": "~2.18.0",
     "ember-export-application-global": "^2.0.0",
