--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-modal-dialog": "^2.4.1",
     "ember-resolver": "^4.0.0",
+    "ember-route-action-helper": "^2.0.6",
     "ember-source": "~2.13.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3"
